SPRING DYNAMIC MODULES FRAMEWORK CHANGELOG
==========================================
http://www.springframework.org/osgi

Changes in version 1.2.0 M2 (2008-xx-yy)
----------------------------------------

General
* upgraded to Spring Framework 2.5.6
* added support for compendium namespace (managed-service, config-properties)
* incremented version of spring-osgi.xsd and spring-osgi-compendium.xsd

Package org.springframework.osgi.io
* improved existence check for bundle resources
* fixed manifest headers parsing problem when dealing with nested whitespaces
* fixed handling of optional required bundles

Package org.springframework.osgi.service
* refined single service proxies so that any waiting activity is interrupted on destruction
* improved single service proxies to allow settings update at runtime
* deprecated retryTimes parameter in OsgiServiceProxyFactoryBean

Package org.springframework.osgi.extender
* improved shutdown algorithm to deal with self-referenced and transitive service references

Changes in version 1.2.0 M1 (2008-09-05)
----------------------------------------

General
* added new annotation-based, Spring-MVC sample
* removed petclinic sample (superseeded by simple-web-app and web-console samples)
* improved sample wars packaging
* improved framework behaviour when running in environments with Java 2 security enabled

Package org.springframework.osgi.context
* added reporting of Errors raised during delegated refresh in AbstractDelegatedExecutionApplicationContext

Package org.springframework.osgi.extender
* fixed bug related to enabling Spring-DM annotation depedency processing
* improved annotation injection processing
* improved extender configuration thread-safety
* fixed potential race condition in asynchronous waiting for service dependencies

Package org.springframework.osgi.io
* improved existence check for bundle resources
* improved jar space pattern matching when the root is not specified